Add mainstream firmware generation engine
